@@ -16,5 +16,8 @@ from ag.orbit.node.__version__ import __version__
 print ("ORBIT Node version %s" % (__version__))
 
 
-FIRST_ORBIT_BLOCK = 540155
+class TokenError(Exception):
+
+    def __init__(self, *args, **kwargs):
+        Exception.__init__(self, *args, **kwargs)
 
