@@ -4,6 +4,14 @@ ag\.orbit\.node package
 Submodules
 ----------
 
+ag\.orbit\.node\.all module
+---------------------------
+
+.. automodule:: ag.orbit.node.all
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
 ag\.orbit\.node\.config module
 ------------------------------
 
@@ -12,10 +20,34 @@ ag\.orbit\.node\.config module
     :undoc-members:
     :show-inheritance:
 
+ag\.orbit\.node\.daemon module
+------------------------------
+
+.. automodule:: ag.orbit.node.daemon
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
 ag\.orbit\.node\.db module
 --------------------------
 
 .. automodule:: ag.orbit.node.db
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+ag\.orbit\.node\.info module
+----------------------------
+
+.. automodule:: ag.orbit.node.info
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+ag\.orbit\.node\.next module
+----------------------------
+
+.. automodule:: ag.orbit.node.next
     :members:
     :undoc-members:
     :show-inheritance:
