@@ -1,6 +1,8 @@
 Copyright (C) 2018 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_073118_1 - Updated for API version 0.3. Now validates address ownership for token events.
+
 saw_072818_1 - Implement some commands.
 
 saw_072718_2 - Misc. installation and documentation fixes.
